Implemented GMM method for finding high/low cutoff.

--- a/meta_analysis/protein_meta.ipynb
+++ b/meta_analysis/protein_meta.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "sharp-bracket",
+   "execution_count": 1,
+   "id": "otherwise-dialogue",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "\n",
@@ -15,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "after-thanksgiving",
+   "execution_count": 2,
+   "id": "material-attack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,20 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "accompanied-ultimate",
+   "execution_count": 3,
+   "id": "super-ticket",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 3\n",
+    "dset_idx <- 1\n",
     "# hub_con_thresh <- 0.25\n",
     "hub_con_thresh <- 0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "powerful-correlation",
+   "execution_count": 4,
+   "id": "furnished-president",
    "metadata": {},
    "outputs": [
     {
@@ -76,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "realistic-allah",
+   "execution_count": 5,
+   "id": "academic-siemens",
    "metadata": {},
    "outputs": [
     {
@@ -107,8 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "covered-operator",
+   "execution_count": 6,
+   "id": "binding-response",
    "metadata": {},
    "outputs": [
     {
@@ -148,8 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "compliant-enclosure",
+   "execution_count": 7,
+   "id": "operating-occasion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,8 +177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "material-coordination",
+   "execution_count": 8,
+   "id": "developed-senate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,72 +192,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "sticky-mailing",
+   "execution_count": 9,
+   "id": "joint-pledge",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 6 × 10</caption>\n",
+       "<caption>A tibble: 16 × 10</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>geneID</th><th scope=col>change_dir</th><th scope=col>base_mean</th><th scope=col>lfc</th><th scope=col>qval</th><th scope=col>cancer</th><th scope=col>high</th><th scope=col>medium</th><th scope=col>low</th><th scope=col>not_detected</th></tr>\n",
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>ANGPT4</td><td>down</td><td>  66.71048</td><td>-4.039425</td><td>4.830118e-46</td><td>endometrial cancer</td><td>1</td><td>7</td><td>2</td><td> 1</td></tr>\n",
-       "\t<tr><td>LGI2  </td><td>down</td><td> 682.82144</td><td>-2.418608</td><td>5.702105e-41</td><td>endometrial cancer</td><td>0</td><td>0</td><td>1</td><td>10</td></tr>\n",
-       "\t<tr><td>LOXL3 </td><td>down</td><td> 466.65753</td><td>-1.128548</td><td>2.120413e-31</td><td>endometrial cancer</td><td>0</td><td>0</td><td>1</td><td>10</td></tr>\n",
-       "\t<tr><td>PAPPA2</td><td>down</td><td>  57.24273</td><td>-1.267549</td><td>2.683043e-07</td><td>endometrial cancer</td><td>0</td><td>0</td><td>0</td><td>10</td></tr>\n",
-       "\t<tr><td>RSPO3 </td><td>down</td><td>1829.66009</td><td>-2.875078</td><td>3.438289e-33</td><td>endometrial cancer</td><td>0</td><td>7</td><td>2</td><td> 3</td></tr>\n",
-       "\t<tr><td>WNT10A</td><td>up  </td><td> 282.84230</td><td> 4.337583</td><td>1.423487e-49</td><td>endometrial cancer</td><td>0</td><td>3</td><td>3</td><td> 5</td></tr>\n",
+       "\t<tr><td>A2ML1   </td><td>down</td><td> 8274.666005</td><td>-1.043458</td><td>4.063069e-02</td><td>cervical cancer</td><td>2</td><td>3</td><td>1</td><td> 6</td></tr>\n",
+       "\t<tr><td>ADAM20  </td><td>down</td><td>    5.021051</td><td>-2.384743</td><td>5.302013e-19</td><td>cervical cancer</td><td>0</td><td>0</td><td>0</td><td>10</td></tr>\n",
+       "\t<tr><td>ADAMTS18</td><td>down</td><td>   85.515119</td><td>-1.606028</td><td>1.966841e-02</td><td>cervical cancer</td><td>3</td><td>1</td><td>6</td><td> 2</td></tr>\n",
+       "\t<tr><td>FLG2    </td><td>down</td><td>   11.260223</td><td>-1.664013</td><td>2.010630e-02</td><td>cervical cancer</td><td>0</td><td>0</td><td>2</td><td>10</td></tr>\n",
+       "\t<tr><td>HRNR    </td><td>down</td><td>   46.096473</td><td>-1.435467</td><td>2.750615e-03</td><td>cervical cancer</td><td>0</td><td>1</td><td>5</td><td> 5</td></tr>\n",
+       "\t<tr><td>MMP24   </td><td>down</td><td>   75.707252</td><td>-1.314716</td><td>2.111814e-03</td><td>cervical cancer</td><td>0</td><td>2</td><td>3</td><td> 6</td></tr>\n",
+       "\t<tr><td>OVGP1   </td><td>down</td><td>  108.812270</td><td>-1.603303</td><td>7.957032e-07</td><td>cervical cancer</td><td>0</td><td>0</td><td>0</td><td>12</td></tr>\n",
+       "\t<tr><td>VWA5B2  </td><td>down</td><td>   37.593033</td><td>-1.352740</td><td>4.173751e-03</td><td>cervical cancer</td><td>0</td><td>3</td><td>7</td><td> 2</td></tr>\n",
+       "\t<tr><td>CLEC2A  </td><td>up  </td><td>   50.429286</td><td> 4.845719</td><td>2.004929e-04</td><td>cervical cancer</td><td>0</td><td>0</td><td>0</td><td>12</td></tr>\n",
+       "\t<tr><td>CSTB    </td><td>up  </td><td>37130.026057</td><td> 1.311200</td><td>1.174906e-04</td><td>cervical cancer</td><td>0</td><td>1</td><td>1</td><td>10</td></tr>\n",
+       "\t<tr><td>LGALS7  </td><td>up  </td><td> 2053.219530</td><td> 4.519554</td><td>2.667718e-10</td><td>cervical cancer</td><td>0</td><td>0</td><td>0</td><td>12</td></tr>\n",
+       "\t<tr><td>LGALS9C </td><td>up  </td><td>  216.965093</td><td> 1.211112</td><td>1.104835e-02</td><td>cervical cancer</td><td>0</td><td>1</td><td>1</td><td> 8</td></tr>\n",
+       "\t<tr><td>MUC13   </td><td>up  </td><td> 2408.371778</td><td> 7.209132</td><td>2.283496e-13</td><td>cervical cancer</td><td>0</td><td>0</td><td>0</td><td>10</td></tr>\n",
+       "\t<tr><td>MUC6    </td><td>up  </td><td> 1152.485279</td><td> 4.531702</td><td>2.334433e-05</td><td>cervical cancer</td><td>0</td><td>0</td><td>0</td><td>12</td></tr>\n",
+       "\t<tr><td>S100A11 </td><td>up  </td><td>61333.244152</td><td> 2.289189</td><td>1.529940e-23</td><td>cervical cancer</td><td>7</td><td>4</td><td>0</td><td> 1</td></tr>\n",
+       "\t<tr><td>SERPINB5</td><td>up  </td><td>15735.268369</td><td> 2.444410</td><td>1.165095e-06</td><td>cervical cancer</td><td>0</td><td>7</td><td>2</td><td> 3</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 6 × 10\n",
+       "A tibble: 16 × 10\n",
        "\\begin{tabular}{llllllllll}\n",
        " geneID & change\\_dir & base\\_mean & lfc & qval & cancer & high & medium & low & not\\_detected\\\\\n",
        " <chr> & <chr> & <dbl> & <dbl> & <dbl> & <chr> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t ANGPT4 & down &   66.71048 & -4.039425 & 4.830118e-46 & endometrial cancer & 1 & 7 & 2 &  1\\\\\n",
-       "\t LGI2   & down &  682.82144 & -2.418608 & 5.702105e-41 & endometrial cancer & 0 & 0 & 1 & 10\\\\\n",
-       "\t LOXL3  & down &  466.65753 & -1.128548 & 2.120413e-31 & endometrial cancer & 0 & 0 & 1 & 10\\\\\n",
-       "\t PAPPA2 & down &   57.24273 & -1.267549 & 2.683043e-07 & endometrial cancer & 0 & 0 & 0 & 10\\\\\n",
-       "\t RSPO3  & down & 1829.66009 & -2.875078 & 3.438289e-33 & endometrial cancer & 0 & 7 & 2 &  3\\\\\n",
-       "\t WNT10A & up   &  282.84230 &  4.337583 & 1.423487e-49 & endometrial cancer & 0 & 3 & 3 &  5\\\\\n",
+       "\t A2ML1    & down &  8274.666005 & -1.043458 & 4.063069e-02 & cervical cancer & 2 & 3 & 1 &  6\\\\\n",
+       "\t ADAM20   & down &     5.021051 & -2.384743 & 5.302013e-19 & cervical cancer & 0 & 0 & 0 & 10\\\\\n",
+       "\t ADAMTS18 & down &    85.515119 & -1.606028 & 1.966841e-02 & cervical cancer & 3 & 1 & 6 &  2\\\\\n",
+       "\t FLG2     & down &    11.260223 & -1.664013 & 2.010630e-02 & cervical cancer & 0 & 0 & 2 & 10\\\\\n",
+       "\t HRNR     & down &    46.096473 & -1.435467 & 2.750615e-03 & cervical cancer & 0 & 1 & 5 &  5\\\\\n",
+       "\t MMP24    & down &    75.707252 & -1.314716 & 2.111814e-03 & cervical cancer & 0 & 2 & 3 &  6\\\\\n",
+       "\t OVGP1    & down &   108.812270 & -1.603303 & 7.957032e-07 & cervical cancer & 0 & 0 & 0 & 12\\\\\n",
+       "\t VWA5B2   & down &    37.593033 & -1.352740 & 4.173751e-03 & cervical cancer & 0 & 3 & 7 &  2\\\\\n",
+       "\t CLEC2A   & up   &    50.429286 &  4.845719 & 2.004929e-04 & cervical cancer & 0 & 0 & 0 & 12\\\\\n",
+       "\t CSTB     & up   & 37130.026057 &  1.311200 & 1.174906e-04 & cervical cancer & 0 & 1 & 1 & 10\\\\\n",
+       "\t LGALS7   & up   &  2053.219530 &  4.519554 & 2.667718e-10 & cervical cancer & 0 & 0 & 0 & 12\\\\\n",
+       "\t LGALS9C  & up   &   216.965093 &  1.211112 & 1.104835e-02 & cervical cancer & 0 & 1 & 1 &  8\\\\\n",
+       "\t MUC13    & up   &  2408.371778 &  7.209132 & 2.283496e-13 & cervical cancer & 0 & 0 & 0 & 10\\\\\n",
+       "\t MUC6     & up   &  1152.485279 &  4.531702 & 2.334433e-05 & cervical cancer & 0 & 0 & 0 & 12\\\\\n",
+       "\t S100A11  & up   & 61333.244152 &  2.289189 & 1.529940e-23 & cervical cancer & 7 & 4 & 0 &  1\\\\\n",
+       "\t SERPINB5 & up   & 15735.268369 &  2.444410 & 1.165095e-06 & cervical cancer & 0 & 7 & 2 &  3\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 6 × 10\n",
+       "A tibble: 16 × 10\n",
        "\n",
        "| geneID &lt;chr&gt; | change_dir &lt;chr&gt; | base_mean &lt;dbl&gt; | lfc &lt;dbl&gt; | qval &lt;dbl&gt; | cancer &lt;chr&gt; | high &lt;dbl&gt; | medium &lt;dbl&gt; | low &lt;dbl&gt; | not_detected &lt;dbl&gt; |\n",
        "|---|---|---|---|---|---|---|---|---|---|\n",
-       "| ANGPT4 | down |   66.71048 | -4.039425 | 4.830118e-46 | endometrial cancer | 1 | 7 | 2 |  1 |\n",
-       "| LGI2   | down |  682.82144 | -2.418608 | 5.702105e-41 | endometrial cancer | 0 | 0 | 1 | 10 |\n",
-       "| LOXL3  | down |  466.65753 | -1.128548 | 2.120413e-31 | endometrial cancer | 0 | 0 | 1 | 10 |\n",
-       "| PAPPA2 | down |   57.24273 | -1.267549 | 2.683043e-07 | endometrial cancer | 0 | 0 | 0 | 10 |\n",
-       "| RSPO3  | down | 1829.66009 | -2.875078 | 3.438289e-33 | endometrial cancer | 0 | 7 | 2 |  3 |\n",
-       "| WNT10A | up   |  282.84230 |  4.337583 | 1.423487e-49 | endometrial cancer | 0 | 3 | 3 |  5 |\n",
+       "| A2ML1    | down |  8274.666005 | -1.043458 | 4.063069e-02 | cervical cancer | 2 | 3 | 1 |  6 |\n",
+       "| ADAM20   | down |     5.021051 | -2.384743 | 5.302013e-19 | cervical cancer | 0 | 0 | 0 | 10 |\n",
+       "| ADAMTS18 | down |    85.515119 | -1.606028 | 1.966841e-02 | cervical cancer | 3 | 1 | 6 |  2 |\n",
+       "| FLG2     | down |    11.260223 | -1.664013 | 2.010630e-02 | cervical cancer | 0 | 0 | 2 | 10 |\n",
+       "| HRNR     | down |    46.096473 | -1.435467 | 2.750615e-03 | cervical cancer | 0 | 1 | 5 |  5 |\n",
+       "| MMP24    | down |    75.707252 | -1.314716 | 2.111814e-03 | cervical cancer | 0 | 2 | 3 |  6 |\n",
+       "| OVGP1    | down |   108.812270 | -1.603303 | 7.957032e-07 | cervical cancer | 0 | 0 | 0 | 12 |\n",
+       "| VWA5B2   | down |    37.593033 | -1.352740 | 4.173751e-03 | cervical cancer | 0 | 3 | 7 |  2 |\n",
+       "| CLEC2A   | up   |    50.429286 |  4.845719 | 2.004929e-04 | cervical cancer | 0 | 0 | 0 | 12 |\n",
+       "| CSTB     | up   | 37130.026057 |  1.311200 | 1.174906e-04 | cervical cancer | 0 | 1 | 1 | 10 |\n",
+       "| LGALS7   | up   |  2053.219530 |  4.519554 | 2.667718e-10 | cervical cancer | 0 | 0 | 0 | 12 |\n",
+       "| LGALS9C  | up   |   216.965093 |  1.211112 | 1.104835e-02 | cervical cancer | 0 | 1 | 1 |  8 |\n",
+       "| MUC13    | up   |  2408.371778 |  7.209132 | 2.283496e-13 | cervical cancer | 0 | 0 | 0 | 10 |\n",
+       "| MUC6     | up   |  1152.485279 |  4.531702 | 2.334433e-05 | cervical cancer | 0 | 0 | 0 | 12 |\n",
+       "| S100A11  | up   | 61333.244152 |  2.289189 | 1.529940e-23 | cervical cancer | 7 | 4 | 0 |  1 |\n",
+       "| SERPINB5 | up   | 15735.268369 |  2.444410 | 1.165095e-06 | cervical cancer | 0 | 7 | 2 |  3 |\n",
        "\n"
       ],
       "text/plain": [
-       "  geneID change_dir base_mean  lfc       qval         cancer             high\n",
-       "1 ANGPT4 down         66.71048 -4.039425 4.830118e-46 endometrial cancer 1   \n",
-       "2 LGI2   down        682.82144 -2.418608 5.702105e-41 endometrial cancer 0   \n",
-       "3 LOXL3  down        466.65753 -1.128548 2.120413e-31 endometrial cancer 0   \n",
-       "4 PAPPA2 down         57.24273 -1.267549 2.683043e-07 endometrial cancer 0   \n",
-       "5 RSPO3  down       1829.66009 -2.875078 3.438289e-33 endometrial cancer 0   \n",
-       "6 WNT10A up          282.84230  4.337583 1.423487e-49 endometrial cancer 0   \n",
-       "  medium low not_detected\n",
-       "1 7      2    1          \n",
-       "2 0      1   10          \n",
-       "3 0      1   10          \n",
-       "4 0      0   10          \n",
-       "5 7      2    3          \n",
-       "6 3      3    5          "
+       "   geneID   change_dir base_mean    lfc       qval         cancer          high\n",
+       "1  A2ML1    down        8274.666005 -1.043458 4.063069e-02 cervical cancer 2   \n",
+       "2  ADAM20   down           5.021051 -2.384743 5.302013e-19 cervical cancer 0   \n",
+       "3  ADAMTS18 down          85.515119 -1.606028 1.966841e-02 cervical cancer 3   \n",
+       "4  FLG2     down          11.260223 -1.664013 2.010630e-02 cervical cancer 0   \n",
+       "5  HRNR     down          46.096473 -1.435467 2.750615e-03 cervical cancer 0   \n",
+       "6  MMP24    down          75.707252 -1.314716 2.111814e-03 cervical cancer 0   \n",
+       "7  OVGP1    down         108.812270 -1.603303 7.957032e-07 cervical cancer 0   \n",
+       "8  VWA5B2   down          37.593033 -1.352740 4.173751e-03 cervical cancer 0   \n",
+       "9  CLEC2A   up            50.429286  4.845719 2.004929e-04 cervical cancer 0   \n",
+       "10 CSTB     up         37130.026057  1.311200 1.174906e-04 cervical cancer 0   \n",
+       "11 LGALS7   up          2053.219530  4.519554 2.667718e-10 cervical cancer 0   \n",
+       "12 LGALS9C  up           216.965093  1.211112 1.104835e-02 cervical cancer 0   \n",
+       "13 MUC13    up          2408.371778  7.209132 2.283496e-13 cervical cancer 0   \n",
+       "14 MUC6     up          1152.485279  4.531702 2.334433e-05 cervical cancer 0   \n",
+       "15 S100A11  up         61333.244152  2.289189 1.529940e-23 cervical cancer 7   \n",
+       "16 SERPINB5 up         15735.268369  2.444410 1.165095e-06 cervical cancer 0   \n",
+       "   medium low not_detected\n",
+       "1  3      1    6          \n",
+       "2  0      0   10          \n",
+       "3  1      6    2          \n",
+       "4  0      2   10          \n",
+       "5  1      5    5          \n",
+       "6  2      3    6          \n",
+       "7  0      0   12          \n",
+       "8  3      7    2          \n",
+       "9  0      0   12          \n",
+       "10 1      1   10          \n",
+       "11 0      0   12          \n",
+       "12 1      1    8          \n",
+       "13 0      0   10          \n",
+       "14 0      0   12          \n",
+       "15 4      0    1          \n",
+       "16 7      2    3          "
       ]
      },
      "metadata": {},
