--- a/network_analysis/relate_modules_to_traits_3.ipynb
+++ b/network_analysis/relate_modules_to_traits_3.ipynb
@@ -99,8 +99,7 @@
     "unified_dsets <- c(\"unified_cervical_data\", \"unified_uterine_data\", \"unified_uterine_endometrial_data\")\n",
     "\n",
     "event_code <- list(\"Alive\" = 0, \"Dead\" = 1)\n",
-    "# Want to bias q-values closer to \"BH\" adjustment for module-wise multiple testing\n",
-    "# since there are fewer modules than genes\n",
+    "# Want to bias q-values to be more conservative for modules.\n",
     "# This value also needs to be sufficiently small as to not cause an error for any datasets\n",
     "# (too few samples may lead to bad behavior of the qvalue() function)\n",
     "module_lambda_thresh <- 0.5"
