Done with all analyses for draft 2.

--- a/feature_selection_analysis/km.ipynb
+++ b/feature_selection_analysis/km.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "commercial-basement",
+   "id": "employed-spell",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -78,18 +78,23 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "infinite-apartment",
+   "id": "caroline-marketplace",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 3"
+    "dset_idx <- 1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "weekly-carnival",
-   "metadata": {},
+   "id": "prerequisite-northeast",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -161,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "victorian-audio",
+   "id": "painted-negative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "extreme-verse",
+   "id": "pharmaceutical-wallet",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "inner-hanging",
+   "id": "handled-perception",
    "metadata": {},
    "outputs": [
     {
@@ -325,18 +330,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "minute-creation",
+   "execution_count": 7,
+   "id": "round-going",
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_tsv(joined_surv_df, paste0(dirs$analysis_dir, \"/survival/\", unified_dsets[dset_idx], \"_survival_results.tsv\"))"
+    "write_tsv(joined_surv_df, paste0(dirs$analysis_dir, \"/survival/\", unified_dsets[dset_idx], \"_univ_survival_results.tsv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "caring-nickel",
+   "execution_count": 8,
+   "id": "significant-cheese",
    "metadata": {},
    "outputs": [],
    "source": [
