Working prototype but may want to make regularization more liberal

--- a/feature_selection_analysis/km.ipynb
+++ b/feature_selection_analysis/km.ipynb
@@ -3,26 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "employed-spell",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "id": "rough-complex",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ---------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -78,17 +73,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "caroline-marketplace",
+   "id": "realistic-picnic",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 1"
+    "dset_idx <- 3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "prerequisite-northeast",
+   "id": "posted-phone",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -101,7 +96,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  sample_name = \u001b[31mcol_character()\u001b[39m,\n",
       "  vital_status = \u001b[31mcol_character()\u001b[39m,\n",
@@ -120,7 +115,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  cutoff = \u001b[32mcol_double()\u001b[39m\n",
@@ -128,7 +123,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -160,13 +155,15 @@
     "# Combine survival data and normalized count data\n",
     "filtered_joined_df <- filtered_survival_df %>%\n",
     "    inner_join(norm_matrisome_counts_t_df, by = \"sample_name\") %>%\n",
-    "    select(one_of(\"sample_name\", \"vital_status\", \"survival_time\", umsmg_demg_list))"
+    "    select(one_of(\"sample_name\", \"vital_status\", \"survival_time\", umsmg_demg_list)) %>%\n",
+    "    # cannot have survival times of 0\n",
+    "    dplyr::filter(survival_time > 0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "painted-negative",
+   "id": "disciplinary-asthma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "pharmaceutical-wallet",
+   "id": "inside-harris",
    "metadata": {},
    "outputs": [
     {
@@ -232,89 +229,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "handled-perception",
+   "execution_count": 13,
+   "id": "micro-rally",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 12 × 5</caption>\n",
+       "<caption>A tibble: 0 × 5</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>geneID</th><th scope=col>km_pval</th><th scope=col>km_qval</th><th scope=col>cph_pval</th><th scope=col>cph_qval</th></tr>\n",
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>PRL     </td><td>0.030190785</td><td>0.3282728</td><td>0.093182843</td><td>0.2567660</td></tr>\n",
-       "\t<tr><td>CCL7    </td><td>0.029842608</td><td>0.3282728</td><td>0.084488439</td><td>0.2567660</td></tr>\n",
-       "\t<tr><td>REG3A   </td><td>0.048818537</td><td>0.3317609</td><td>0.007443063</td><td>0.1431721</td></tr>\n",
-       "\t<tr><td>PCOLCE2 </td><td>0.087378566</td><td>0.4568378</td><td>0.040945530</td><td>0.2028634</td></tr>\n",
-       "\t<tr><td>COL6A5  </td><td>0.004378179</td><td>0.2380257</td><td>0.021296912</td><td>0.1564901</td></tr>\n",
-       "\t<tr><td>TNFSF11 </td><td>0.171469936</td><td>0.4568378</td><td>0.041411854</td><td>0.2028634</td></tr>\n",
-       "\t<tr><td>ANGPTL2 </td><td>0.016428826</td><td>0.2977253</td><td>0.003721132</td><td>0.1431721</td></tr>\n",
-       "\t<tr><td>SERPIND1</td><td>0.135949522</td><td>0.4568378</td><td>0.012989630</td><td>0.1431721</td></tr>\n",
-       "\t<tr><td>SERPINA3</td><td>0.040719767</td><td>0.3317609</td><td>0.466935790</td><td>0.4728980</td></tr>\n",
-       "\t<tr><td>LGI2    </td><td>0.010475725</td><td>0.2847636</td><td>0.018170458</td><td>0.1564901</td></tr>\n",
-       "\t<tr><td>FGF19   </td><td>0.176461854</td><td>0.4568378</td><td>0.025544931</td><td>0.1608897</td></tr>\n",
-       "\t<tr><td>COL5A3  </td><td>0.042847215</td><td>0.3317609</td><td>0.012346876</td><td>0.1431721</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 12 × 5\n",
+       "A tibble: 0 × 5\n",
        "\\begin{tabular}{lllll}\n",
        " geneID & km\\_pval & km\\_qval & cph\\_pval & cph\\_qval\\\\\n",
        " <chr> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t PRL      & 0.030190785 & 0.3282728 & 0.093182843 & 0.2567660\\\\\n",
-       "\t CCL7     & 0.029842608 & 0.3282728 & 0.084488439 & 0.2567660\\\\\n",
-       "\t REG3A    & 0.048818537 & 0.3317609 & 0.007443063 & 0.1431721\\\\\n",
-       "\t PCOLCE2  & 0.087378566 & 0.4568378 & 0.040945530 & 0.2028634\\\\\n",
-       "\t COL6A5   & 0.004378179 & 0.2380257 & 0.021296912 & 0.1564901\\\\\n",
-       "\t TNFSF11  & 0.171469936 & 0.4568378 & 0.041411854 & 0.2028634\\\\\n",
-       "\t ANGPTL2  & 0.016428826 & 0.2977253 & 0.003721132 & 0.1431721\\\\\n",
-       "\t SERPIND1 & 0.135949522 & 0.4568378 & 0.012989630 & 0.1431721\\\\\n",
-       "\t SERPINA3 & 0.040719767 & 0.3317609 & 0.466935790 & 0.4728980\\\\\n",
-       "\t LGI2     & 0.010475725 & 0.2847636 & 0.018170458 & 0.1564901\\\\\n",
-       "\t FGF19    & 0.176461854 & 0.4568378 & 0.025544931 & 0.1608897\\\\\n",
-       "\t COL5A3   & 0.042847215 & 0.3317609 & 0.012346876 & 0.1431721\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 12 × 5\n",
+       "A tibble: 0 × 5\n",
        "\n",
        "| geneID &lt;chr&gt; | km_pval &lt;dbl&gt; | km_qval &lt;dbl&gt; | cph_pval &lt;dbl&gt; | cph_qval &lt;dbl&gt; |\n",
        "|---|---|---|---|---|\n",
-       "| PRL      | 0.030190785 | 0.3282728 | 0.093182843 | 0.2567660 |\n",
-       "| CCL7     | 0.029842608 | 0.3282728 | 0.084488439 | 0.2567660 |\n",
-       "| REG3A    | 0.048818537 | 0.3317609 | 0.007443063 | 0.1431721 |\n",
-       "| PCOLCE2  | 0.087378566 | 0.4568378 | 0.040945530 | 0.2028634 |\n",
-       "| COL6A5   | 0.004378179 | 0.2380257 | 0.021296912 | 0.1564901 |\n",
-       "| TNFSF11  | 0.171469936 | 0.4568378 | 0.041411854 | 0.2028634 |\n",
-       "| ANGPTL2  | 0.016428826 | 0.2977253 | 0.003721132 | 0.1431721 |\n",
-       "| SERPIND1 | 0.135949522 | 0.4568378 | 0.012989630 | 0.1431721 |\n",
-       "| SERPINA3 | 0.040719767 | 0.3317609 | 0.466935790 | 0.4728980 |\n",
-       "| LGI2     | 0.010475725 | 0.2847636 | 0.018170458 | 0.1564901 |\n",
-       "| FGF19    | 0.176461854 | 0.4568378 | 0.025544931 | 0.1608897 |\n",
-       "| COL5A3   | 0.042847215 | 0.3317609 | 0.012346876 | 0.1431721 |\n",
        "\n"
       ],
       "text/plain": [
-       "   geneID   km_pval     km_qval   cph_pval    cph_qval \n",
-       "1  PRL      0.030190785 0.3282728 0.093182843 0.2567660\n",
-       "2  CCL7     0.029842608 0.3282728 0.084488439 0.2567660\n",
-       "3  REG3A    0.048818537 0.3317609 0.007443063 0.1431721\n",
-       "4  PCOLCE2  0.087378566 0.4568378 0.040945530 0.2028634\n",
-       "5  COL6A5   0.004378179 0.2380257 0.021296912 0.1564901\n",
-       "6  TNFSF11  0.171469936 0.4568378 0.041411854 0.2028634\n",
-       "7  ANGPTL2  0.016428826 0.2977253 0.003721132 0.1431721\n",
-       "8  SERPIND1 0.135949522 0.4568378 0.012989630 0.1431721\n",
-       "9  SERPINA3 0.040719767 0.3317609 0.466935790 0.4728980\n",
-       "10 LGI2     0.010475725 0.2847636 0.018170458 0.1564901\n",
-       "11 FGF19    0.176461854 0.4568378 0.025544931 0.1608897\n",
-       "12 COL5A3   0.042847215 0.3317609 0.012346876 0.1431721"
+       "     geneID km_pval km_qval cph_pval cph_qval"
       ]
      },
      "metadata": {},
@@ -324,14 +273,14 @@
    "source": [
     "joined_surv_df %>%\n",
     "#     filter(cph_pval < 0.1)\n",
-    "#     filter(km_pval < 0.1)\n",
-    "    filter(km_pval < 0.05 | cph_pval < 0.05)"
+    "    filter(km_pval < 0.05 | cph_pval < 0.05) %>%\n",
+    "    filter(km_qval < 0.25 | cph_qval < 0.25)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "round-going",
+   "id": "recovered-offset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "significant-cheese",
+   "id": "external-sight",
    "metadata": {},
    "outputs": [],
    "source": [
