Implemented Cox PH with L1 regression.

--- a/feature_selection_analysis/km.ipynb
+++ b/feature_selection_analysis/km.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "rough-complex",
+   "id": "prime-homework",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "realistic-picnic",
+   "id": "polyphonic-paste",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,13 +83,8 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "posted-phone",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "id": "express-pointer",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -163,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "disciplinary-asthma",
+   "id": "electronic-factory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "inside-harris",
+   "id": "prospective-holly",
    "metadata": {},
    "outputs": [
     {
@@ -229,58 +224,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "micro-rally",
+   "execution_count": 6,
+   "id": "architectural-entrepreneur",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 0 × 5</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>geneID</th><th scope=col>km_pval</th><th scope=col>km_qval</th><th scope=col>cph_pval</th><th scope=col>cph_qval</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 0 × 5\n",
-       "\\begin{tabular}{lllll}\n",
-       " geneID & km\\_pval & km\\_qval & cph\\_pval & cph\\_qval\\\\\n",
-       " <chr> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 0 × 5\n",
-       "\n",
-       "| geneID &lt;chr&gt; | km_pval &lt;dbl&gt; | km_qval &lt;dbl&gt; | cph_pval &lt;dbl&gt; | cph_qval &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|\n",
-       "\n"
-      ],
-      "text/plain": [
-       "     geneID km_pval km_qval cph_pval cph_qval"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "joined_surv_df %>%\n",
-    "#     filter(cph_pval < 0.1)\n",
-    "    filter(km_pval < 0.05 | cph_pval < 0.05) %>%\n",
-    "    filter(km_qval < 0.25 | cph_qval < 0.25)"
+    "# joined_surv_df %>%\n",
+    "# #     filter(cph_pval < 0.1)\n",
+    "# #     filter(km_pval < 0.05 | cph_pval < 0.05) %>%\n",
+    "#     filter(km_qval < 0.15 | cph_qval < 0.15)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "recovered-offset",
+   "id": "civil-lingerie",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "external-sight",
+   "id": "contrary-proposition",
    "metadata": {},
    "outputs": [],
    "source": [
