--- a/meta_analysis/make_gene_lists.ipynb
+++ b/meta_analysis/make_gene_lists.ipynb
@@ -479,9 +479,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_coxph_df <- coxph_df %>%\n",
-    "    inner_join(gene2id_df, by = c(\"geneID\" = \"hugo_symbol\")) %>%\n",
-    "    dplyr::filter(gene_qval < pval_thresh)"
+    "# filtered_coxph_df <- coxph_df %>%\n",
+    "#     inner_join(gene2id_df, by = c(\"geneID\" = \"hugo_symbol\")) %>%\n",
+    "#     dplyr::filter(gene_qval < pval_thresh)"
    ]
   },
   {
@@ -490,9 +490,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_cor_df <- cor_df %>%\n",
-    "    inner_join(gene2id_df, by = c(\"geneID\" = \"hugo_symbol\")) %>%\n",
-    "    dplyr::filter(qval < pval_thresh)"
+    "# filtered_cor_df <- cor_df %>%\n",
+    "#     inner_join(gene2id_df, by = c(\"geneID\" = \"hugo_symbol\")) %>%\n",
+    "#     dplyr::filter(qval < pval_thresh)"
    ]
   },
   {
@@ -501,16 +501,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_coxph_network_df <- network_mm_gs_df %>%\n",
-    "    dplyr::select(geneID, module, mm_pval, mm_cor) %>%\n",
-    "    inner_join(condensed_me_df, by = \"module\") %>%\n",
-    "    inner_join(gene2id_df, by = c(\"geneID\" = \"hugo_symbol\")) %>%\n",
-    "    dplyr::select(geneID, entrez_gene_id, everything()) %>%\n",
-    "    dplyr::filter(me_vital_qval < pval_thresh) %>%\n",
-    "    # Make sure genes are significant members of the module\n",
-    "    dplyr::filter(mm_pval < pval_thresh) %>%\n",
-    "    # Make sure genes are highly connected within the module\n",
-    "    dplyr::filter(geneID %in% hub_df$geneID)"
+    "# filtered_coxph_network_df <- network_mm_gs_df %>%\n",
+    "#     dplyr::select(geneID, module, mm_pval, mm_cor) %>%\n",
+    "#     inner_join(condensed_me_df, by = \"module\") %>%\n",
+    "#     inner_join(gene2id_df, by = c(\"geneID\" = \"hugo_symbol\")) %>%\n",
+    "#     dplyr::select(geneID, entrez_gene_id, everything()) %>%\n",
+    "#     dplyr::filter(me_vital_qval < pval_thresh) %>%\n",
+    "#     # Make sure genes are significant members of the module\n",
+    "#     dplyr::filter(mm_pval < pval_thresh) %>%\n",
+    "#     # Make sure genes are highly connected within the module\n",
+    "#     dplyr::filter(geneID %in% hub_df$geneID)"
    ]
   },
   {
@@ -519,12 +519,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_mi_survival_df <- mi_survival_df %>%\n",
-    "    dplyr::arrange(desc(MI_est_median)) %>%\n",
-    "    dplyr::mutate(pct_delta_max = (MI_est_median - first(MI_est_median)) / first(MI_est_median) * 100) %>%\n",
-    "    dplyr::filter(pct_delta_max > -50) %>%\n",
-    "    inner_join(gene2id_df, by = c(\"geneID\" = \"hugo_symbol\")) %>%\n",
-    "    dplyr::select(geneID, entrez_gene_id, everything())"
+    "# filtered_mi_survival_df <- mi_survival_df %>%\n",
+    "#     dplyr::arrange(desc(MI_est_median)) %>%\n",
+    "#     dplyr::mutate(pct_delta_max = (MI_est_median - first(MI_est_median)) / first(MI_est_median) * 100) %>%\n",
+    "#     dplyr::filter(pct_delta_max > -50) %>%\n",
+    "#     inner_join(gene2id_df, by = c(\"geneID\" = \"hugo_symbol\")) %>%\n",
+    "#     dplyr::select(geneID, entrez_gene_id, everything())"
    ]
   },
   {
@@ -533,10 +533,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_list <- filtered_coxph_df$geneID %>%\n",
-    "    union(filtered_cor_df$geneID) %>%\n",
-    "    union(filtered_coxph_network_df$geneID) %>%\n",
-    "    union(filtered_mi_survival_df$geneID)"
+    "# survival_list <- filtered_coxph_df$geneID %>%\n",
+    "#     union(filtered_cor_df$geneID) %>%\n",
+    "#     union(filtered_coxph_network_df$geneID) %>%\n",
+    "#     union(filtered_mi_survival_df$geneID)"
    ]
   },
   {
@@ -592,7 +592,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "survival_demg_list <- intersect(survival_list, demg_list)"
+    "# survival_demg_list <- intersect(survival_list, demg_list)"
    ]
   },
   {
@@ -771,8 +771,8 @@
     "length(umsmg_demg_list)\n",
     "length(nsmg_demg_list)\n",
     "length(umsmg_nsmg_demg_list)\n",
-    "length(survival_list)\n",
-    "length(survival_demg_list)"
+    "# length(survival_list)\n",
+    "# length(survival_demg_list)"
    ]
   },
   {
